// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapping labeled functions - TypeScript 1`] = `
{
  "classMap": [
    {
      "children": [
        {
          "children": [
            {
              "labels": [],
              "location": "console:1",
              "name": "info",
              "static": false,
              "type": "function",
            },
            {
              "labels": [
                "logging",
              ],
              "location": "console:2",
              "name": "log",
              "static": false,
              "type": "function",
            },
            {
              "labels": [
                "logging",
                "debugging",
              ],
              "location": "console:3",
              "name": "debug",
              "static": false,
              "type": "function",
            },
          ],
          "name": "console",
          "type": "class",
        },
        {
          "children": [
            {
              "labels": [
                "auth",
                "mail",
              ],
              "location": "index.ts:16",
              "name": "signUp",
              "static": true,
              "type": "function",
            },
            {
              "labels": [
                "pure",
              ],
              "location": "index.ts:21",
              "name": "lambdaWithLabel",
              "static": true,
              "type": "function",
            },
            {
              "location": "index.ts:38",
              "name": "f1",
              "static": true,
              "type": "function",
            },
            {
              "location": "index.ts:42",
              "name": "f2",
              "static": true,
              "type": "function",
            },
            {
              "labels": [
                "auth",
              ],
              "location": "index.ts:5",
              "name": "signIn",
              "static": true,
              "type": "function",
            },
          ],
          "name": "index",
          "type": "class",
        },
        {
          "children": [
            {
              "labels": [
                "pure",
              ],
              "location": "index.ts:27",
              "name": "calc",
              "static": false,
              "type": "function",
            },
            {
              "location": "index.ts:32",
              "name": "setX",
              "static": false,
              "type": "function",
            },
          ],
          "name": "A",
          "type": "class",
        },
      ],
      "name": "function-labels-appmap-node-test",
      "type": "package",
    },
  ],
  "events": [
    {
      "defined_class": "index",
      "event": "call",
      "id": 1,
      "lineno": 16,
      "method_id": "signUp",
      "parameters": [],
      "path": "index.ts",
      "static": true,
      "thread_id": 0,
    },
    {
      "defined_class": "console",
      "event": "call",
      "id": 2,
      "lineno": 1,
      "method_id": "info",
      "parameters": [
        {
          "class": "String",
          "value": "'signUp'",
        },
      ],
      "path": "console",
      "receiver": {
        "class": "Object",
        "object_id": 1,
        "value": "[console]",
      },
      "static": false,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 3,
      "parent_id": 2,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 4,
      "parent_id": 1,
      "thread_id": 0,
    },
    {
      "defined_class": "index",
      "event": "call",
      "id": 5,
      "lineno": 5,
      "method_id": "signIn",
      "parameters": [],
      "path": "index.ts",
      "static": true,
      "thread_id": 0,
    },
    {
      "defined_class": "console",
      "event": "call",
      "id": 6,
      "lineno": 1,
      "method_id": "info",
      "parameters": [
        {
          "class": "String",
          "value": "'signIn'",
        },
      ],
      "path": "console",
      "receiver": {
        "class": "Object",
        "object_id": 1,
        "value": "[console]",
      },
      "static": false,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 7,
      "parent_id": 6,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 8,
      "parent_id": 5,
      "thread_id": 0,
    },
    {
      "defined_class": "index",
      "event": "call",
      "id": 9,
      "lineno": 38,
      "method_id": "f1",
      "parameters": [],
      "path": "index.ts",
      "static": true,
      "thread_id": 0,
    },
    {
      "defined_class": "console",
      "event": "call",
      "id": 10,
      "lineno": 2,
      "method_id": "log",
      "parameters": [
        {
          "class": "String",
          "value": "'f1'",
        },
      ],
      "path": "console",
      "receiver": {
        "class": "Object",
        "object_id": 1,
        "value": "[console]",
      },
      "static": false,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 11,
      "parent_id": 10,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 12,
      "parent_id": 9,
      "thread_id": 0,
    },
    {
      "defined_class": "index",
      "event": "call",
      "id": 13,
      "lineno": 42,
      "method_id": "f2",
      "parameters": [],
      "path": "index.ts",
      "static": true,
      "thread_id": 0,
    },
    {
      "defined_class": "console",
      "event": "call",
      "id": 14,
      "lineno": 2,
      "method_id": "log",
      "parameters": [
        {
          "class": "String",
          "value": "'f2'",
        },
      ],
      "path": "console",
      "receiver": {
        "class": "Object",
        "object_id": 1,
        "value": "[console]",
      },
      "static": false,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 15,
      "parent_id": 14,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 16,
      "parent_id": 13,
      "thread_id": 0,
    },
    {
      "defined_class": "A",
      "event": "call",
      "id": 17,
      "lineno": 32,
      "method_id": "setX",
      "parameters": [
        {
          "class": "Number",
          "name": "x",
          "value": "42",
        },
      ],
      "path": "index.ts",
      "receiver": {
        "class": "A",
        "object_id": 2,
        "value": "A { x: 1 }",
      },
      "static": false,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 18,
      "parent_id": 17,
      "thread_id": 0,
    },
    {
      "defined_class": "A",
      "event": "call",
      "id": 19,
      "lineno": 27,
      "method_id": "calc",
      "parameters": [
        {
          "class": "Number",
          "name": "a",
          "value": "2",
        },
        {
          "class": "Number",
          "name": "b",
          "value": "3",
        },
      ],
      "path": "index.ts",
      "receiver": {
        "class": "A",
        "object_id": 2,
        "value": "A { x: 42 }",
      },
      "static": false,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 20,
      "parent_id": 19,
      "return_value": {
        "class": "Number",
        "value": "87",
      },
      "thread_id": 0,
    },
    {
      "defined_class": "index",
      "event": "call",
      "id": 21,
      "lineno": 21,
      "method_id": "lambdaWithLabel",
      "parameters": [],
      "path": "index.ts",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 22,
      "parent_id": 21,
      "return_value": {
        "class": "Number",
        "value": "42",
      },
      "thread_id": 0,
    },
    {
      "defined_class": "console",
      "event": "call",
      "id": 23,
      "lineno": 3,
      "method_id": "debug",
      "parameters": [
        {
          "class": "String",
          "value": "'Debug!'",
        },
      ],
      "path": "console",
      "receiver": {
        "class": "Object",
        "object_id": 1,
        "value": "[console]",
      },
      "static": false,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 24,
      "parent_id": 23,
      "thread_id": 0,
    },
  ],
  "metadata": {
    "app": "function-labels-appmap-node-test",
    "client": {
      "name": "appmap-node",
      "url": "https://github.com/getappmap/appmap-node",
      "version": "test node-appmap version",
    },
    "language": {
      "engine": "Node.js",
      "name": "javascript",
      "version": "test node version",
    },
    "name": "test process recording",
    "recorder": {
      "name": "process",
      "type": "process",
    },
  },
  "version": "1.12",
}
`;

exports[`mapping labeled functions 1`] = `
{
  "classMap": [
    {
      "children": [
        {
          "children": [
            {
              "labels": [],
              "location": "console:1",
              "name": "info",
              "static": false,
              "type": "function",
            },
            {
              "labels": [
                "logging",
              ],
              "location": "console:2",
              "name": "log",
              "static": false,
              "type": "function",
            },
            {
              "labels": [
                "logging",
                "debugging",
              ],
              "location": "console:3",
              "name": "debug",
              "static": false,
              "type": "function",
            },
          ],
          "name": "console",
          "type": "class",
        },
        {
          "children": [
            {
              "labels": [
                "auth",
                "mail",
              ],
              "location": "index.js:16",
              "name": "signUp",
              "static": true,
              "type": "function",
            },
            {
              "labels": [
                "pure",
              ],
              "location": "index.js:21",
              "name": "lambdaWithLabel",
              "static": true,
              "type": "function",
            },
            {
              "location": "index.js:38",
              "name": "f1",
              "static": true,
              "type": "function",
            },
            {
              "location": "index.js:42",
              "name": "f2",
              "static": true,
              "type": "function",
            },
            {
              "labels": [
                "auth",
              ],
              "location": "index.js:5",
              "name": "signIn",
              "static": true,
              "type": "function",
            },
          ],
          "name": "index",
          "type": "class",
        },
        {
          "children": [
            {
              "labels": [
                "pure",
              ],
              "location": "index.js:27",
              "name": "calc",
              "static": false,
              "type": "function",
            },
            {
              "location": "index.js:32",
              "name": "setX",
              "static": false,
              "type": "function",
            },
          ],
          "name": "A",
          "type": "class",
        },
      ],
      "name": "function-labels-appmap-node-test",
      "type": "package",
    },
  ],
  "events": [
    {
      "defined_class": "index",
      "event": "call",
      "id": 1,
      "lineno": 16,
      "method_id": "signUp",
      "parameters": [],
      "path": "index.js",
      "static": true,
      "thread_id": 0,
    },
    {
      "defined_class": "console",
      "event": "call",
      "id": 2,
      "lineno": 1,
      "method_id": "info",
      "parameters": [
        {
          "class": "String",
          "value": "'signUp'",
        },
      ],
      "path": "console",
      "receiver": {
        "class": "Object",
        "object_id": 1,
        "value": "[console]",
      },
      "static": false,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 3,
      "parent_id": 2,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 4,
      "parent_id": 1,
      "thread_id": 0,
    },
    {
      "defined_class": "index",
      "event": "call",
      "id": 5,
      "lineno": 5,
      "method_id": "signIn",
      "parameters": [],
      "path": "index.js",
      "static": true,
      "thread_id": 0,
    },
    {
      "defined_class": "console",
      "event": "call",
      "id": 6,
      "lineno": 1,
      "method_id": "info",
      "parameters": [
        {
          "class": "String",
          "value": "'signIn'",
        },
      ],
      "path": "console",
      "receiver": {
        "class": "Object",
        "object_id": 1,
        "value": "[console]",
      },
      "static": false,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 7,
      "parent_id": 6,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 8,
      "parent_id": 5,
      "thread_id": 0,
    },
    {
      "defined_class": "index",
      "event": "call",
      "id": 9,
      "lineno": 38,
      "method_id": "f1",
      "parameters": [],
      "path": "index.js",
      "static": true,
      "thread_id": 0,
    },
    {
      "defined_class": "console",
      "event": "call",
      "id": 10,
      "lineno": 2,
      "method_id": "log",
      "parameters": [
        {
          "class": "String",
          "value": "'f1'",
        },
      ],
      "path": "console",
      "receiver": {
        "class": "Object",
        "object_id": 1,
        "value": "[console]",
      },
      "static": false,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 11,
      "parent_id": 10,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 12,
      "parent_id": 9,
      "thread_id": 0,
    },
    {
      "defined_class": "index",
      "event": "call",
      "id": 13,
      "lineno": 42,
      "method_id": "f2",
      "parameters": [],
      "path": "index.js",
      "static": true,
      "thread_id": 0,
    },
    {
      "defined_class": "console",
      "event": "call",
      "id": 14,
      "lineno": 2,
      "method_id": "log",
      "parameters": [
        {
          "class": "String",
          "value": "'f2'",
        },
      ],
      "path": "console",
      "receiver": {
        "class": "Object",
        "object_id": 1,
        "value": "[console]",
      },
      "static": false,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 15,
      "parent_id": 14,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 16,
      "parent_id": 13,
      "thread_id": 0,
    },
    {
      "defined_class": "A",
      "event": "call",
      "id": 17,
      "lineno": 32,
      "method_id": "setX",
      "parameters": [
        {
          "class": "Number",
          "name": "x",
          "value": "42",
        },
      ],
      "path": "index.js",
      "receiver": {
        "class": "A",
        "object_id": 2,
        "value": "A { x: 1 }",
      },
      "static": false,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 18,
      "parent_id": 17,
      "thread_id": 0,
    },
    {
      "defined_class": "A",
      "event": "call",
      "id": 19,
      "lineno": 27,
      "method_id": "calc",
      "parameters": [
        {
          "class": "Number",
          "name": "a",
          "value": "2",
        },
        {
          "class": "Number",
          "name": "b",
          "value": "3",
        },
      ],
      "path": "index.js",
      "receiver": {
        "class": "A",
        "object_id": 2,
        "value": "A { x: 42 }",
      },
      "static": false,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 20,
      "parent_id": 19,
      "return_value": {
        "class": "Number",
        "value": "87",
      },
      "thread_id": 0,
    },
    {
      "defined_class": "index",
      "event": "call",
      "id": 21,
      "lineno": 21,
      "method_id": "lambdaWithLabel",
      "parameters": [],
      "path": "index.js",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 22,
      "parent_id": 21,
      "return_value": {
        "class": "Number",
        "value": "42",
      },
      "thread_id": 0,
    },
    {
      "defined_class": "console",
      "event": "call",
      "id": 23,
      "lineno": 3,
      "method_id": "debug",
      "parameters": [
        {
          "class": "String",
          "value": "'Debug!'",
        },
      ],
      "path": "console",
      "receiver": {
        "class": "Object",
        "object_id": 1,
        "value": "[console]",
      },
      "static": false,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 24,
      "parent_id": 23,
      "thread_id": 0,
    },
  ],
  "metadata": {
    "app": "function-labels-appmap-node-test",
    "client": {
      "name": "appmap-node",
      "url": "https://github.com/getappmap/appmap-node",
      "version": "test node-appmap version",
    },
    "language": {
      "engine": "Node.js",
      "name": "javascript",
      "version": "test node version",
    },
    "name": "test process recording",
    "recorder": {
      "name": "process",
      "type": "process",
    },
  },
  "version": "1.12",
}
`;
